--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -49,12 +49,7 @@
  margin: 0;
  margin-right: .5em;
 }
-.diff #legend dt.unmod div.mod {
- border: 0;
- margin: 0;
- float: right;
- width: .4em; height: .8em;
-}
+
 /* Styles for the list of diffs */
 .diff ul.entries { clear: both; margin: 0; padding: 0 }
 .diff li.entry {
@@ -115,7 +110,7 @@
  padding: 1px 2px;
  vertical-align: top;
 }
-.diff table tbody.skippedlines td {
+.diff table tbody.skipped td {
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
 }
@@ -124,37 +119,37 @@
 .diff table td ins { color: #060 }
 
 /* Styles for the inline diff */
-.diff table.inline tbody.mod td.base, .diff table.inline tbody.rem td.base {
+.diff table.inline tbody.mod td.l, .diff table.inline tbody.rem td.l {
  background: #fdd;
  border-color: #c00;
  border-style: solid;
  border-width: 0 1px 0 1px;
 }
-.diff table.inline tbody.mod td.chg, .diff table.inline tbody.add td.chg {
+.diff table.inline tbody.mod td.r, .diff table.inline tbody.add td.r {
  background: #dfd;
  border-color: #0a0;
  border-style: solid;
  border-width: 0 1px 0 1px;
 }
-.diff table.inline tbody.mod tr.first td.base,
-.diff table.inline tbody.rem tr.first td.base { border-top-width: 1px }
-.diff table.inline tbody.mod tr.last td.base,
-.diff table.inline tbody.rem tr.last td.base { border-bottom-width: 1px }
-.diff table.inline tbody.mod tr.first td.chg,
-.diff table.inline tbody.add tr.first td.chg { border-top-width: 1px }
-.diff table.inline tbody.mod tr.last td.chg,
-.diff table.inline tbody.add tr.last td.chg { border-bottom-width: 1px }
+.diff table.inline tbody.mod tr.first td.l,
+.diff table.inline tbody.rem tr.first td.l { border-top-width: 1px }
+.diff table.inline tbody.mod tr.last td.l,
+.diff table.inline tbody.rem tr.last td.l { border-bottom-width: 1px }
+.diff table.inline tbody.mod tr.first td.r,
+.diff table.inline tbody.add tr.first td.r { border-top-width: 1px }
+.diff table.inline tbody.mod tr.last td.r,
+.diff table.inline tbody.add tr.last td.r { border-bottom-width: 1px }
 .diff table.inline tbody.mod td del { background: #e99; color: #000 }
 .diff table.inline tbody.mod td ins { background: #9e9; color: #000 }
 
 /* Styles for the side-by-side diff */
 .diff table.sidebyside colgroup.content { width: 50% }
-.diff table.sidebyside tbody.mod td.base { background: #fe9 }
-.diff table.sidebyside tbody.mod td.chg { background: #fd8 }
-.diff table.sidebyside tbody.add td.base { background: #dfd }
-.diff table.sidebyside tbody.add td.chg { background: #cfc }
-.diff table.sidebyside tbody.rem td.base { background: #f88 }
-.diff table.sidebyside tbody.rem td.chg { background: #faa }
+.diff table.sidebyside tbody.mod td.l { background: #fe9 }
+.diff table.sidebyside tbody.mod td.r { background: #fd8 }
+.diff table.sidebyside tbody.add td.l { background: #dfd }
+.diff table.sidebyside tbody.add td.r { background: #cfc }
+.diff table.sidebyside tbody.rem td.l { background: #f88 }
+.diff table.sidebyside tbody.rem td.r { background: #faa }
 .diff table.sidebyside tbody.mod del, .diff table.sidebyside tbody.mod ins {
  background: #fc0;
 }
