--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -73,12 +73,14 @@ label.disabled { color: #d7d7d7 }
 
 /* Header */
 #header hr { display: none }
-#header img { border: none; margin: 0 0 -3em }
+#header h1, #header img { border: none; margin: 0 0 -3em }
 #header :link, #header :visited, #header :link:hover, #header :visited:hover {
  background: transparent;
+ color: #555;
  margin-bottom: 2px;
  border: none;
 }
+#header h1 :link:hover, #header h1 :visited:hover { color: #000 }
 
 /* Quick search */
 #search {
