--- a/intertrac-branch/htdocs/css/about.css
+++ b/intertrac-branch/htdocs/css/about.css
@@ -35,5 +35,4 @@
 #content.about_plugins td.module .path { color: #999; font-size: 90%; }
 
 #content.about_plugins td.xtnpts { margin-top: 1em; }
-#content.about_plugins td.xtnpts ul { list-style: none; margin: 0; padding: 0; }
-#content.about_plugins td.xtnpts ul ul { list-style: square; margin: 0; padding: 0 0 0 2em; }
+#content.about_plugins td.xtnpts ul { list-style: square; margin: 0; padding: 0 0 0 2em; }
