--- a/webadmin/webadmin/htdocs/css/admin.css
+++ b/webadmin/webadmin/htdocs/css/admin.css
@@ -22,3 +22,37 @@ form.addnew { float: right; margin-top: -2em; width: 30% }
 form.mod { margin-top: 1em; }
 table.listing { clear: none; width: 60% }
 table.listing .sel, table.listing .default { text-align: center; width: 1% }
+
+/* Plugins panel */
+form#addplug { width: 35% }
+
+.plugin {
+ background: #f7f7f7;
+ border: 1px solid #d7d7d7;
+ margin: 0 0 2em;
+ padding: 2px .5em;
+ text-align: left;
+ width: 60%;
+}
+.plugin h3 {
+ background: url(../img/expanded.png) 0 50% no-repeat;
+ margin: .5em 0 0;
+ padding-left: 16px;
+}
+.collapsed h3 {
+ background-image: url(../img/collapsed.png);
+}
+.plugin .buttons { text-align: right }
+.plugin .uninstall { margin-top: -2em; padding: 0 }
+.plugin .listing { width: 100% }
+.collapsed .listing, .collapsed .update { display: none }
+.plugin .listing td { background: #fff }
+.plugin .listing .name p {
+ color: #999;
+ font-size: 80%;
+ margin: 0;
+}
+.plugin .listing .name p.description {
+ font-style: italic;
+ margin-top: .3em;
+}
