--- a/webadmin/webadmin/htdocs/css/admin.css
+++ b/webadmin/webadmin/htdocs/css/admin.css
@@ -2,30 +2,31 @@
  border: 1px solid black;
  border-color: gray black black gray;
  margin: 2em 0;
+ padding: .5em 0 0;
  float: left;
- width: 10em;
+ width: 12em;
 }
-.tabs ul { list-style: none; margin: 0; padding: 0 }
-.tabs li { margin: 0; padding: 0.1em 0.5em }
-.tabs li li { padding-left: 2em }
-.tabs ul.active, .tabs li.active { background: #eee }
-.tabs li li.active { font-weight: bold }
-.tabs :link, .tabs :visited { border: none }
+.tabs ul { list-style: none; margin: 0 0 .5em; padding: 0 }
+.tabs li { margin: 0; padding: 0.1em .5em }
+.tabs li li { margin: 0 -0.5em; padding-left: 1.5em }
+.tabs li li.active { background: #ccb; }
+.tabs :link, .tabs :visited { border: none; display: block }
+.tabs :link:hover, .tabs :visited:hover { background: transparent }
 
 .tabcontents {
  padding: 0.4em 2em;
- margin-left: 10em;
+ margin-left: 12em;
  min-height: 300px;
 }
 
-form.addnew { float: right; margin-top: -2em; width: 30% }
+form.addnew { clear: right; float: right; margin: -2em 0 4em; width: 33% }
+form.addnew p.help { color: #666; font-size: 90%; margin: 1em 0 .5em }
 form.mod { margin-top: 1em; }
-table.listing { clear: none; width: 60% }
+table.listing { clear: none; width: 64% }
 table.listing .sel, table.listing .default { text-align: center; width: 1% }
 
 /* Plugins panel */
 form#addplug { width: 35% }
-
 .plugin {
  background: #f7f7f7;
  border: 1px solid #d7d7d7;
@@ -39,20 +40,10 @@ form#addplug { width: 35% }
  margin: .5em 0 0;
  padding-left: 16px;
 }
-.collapsed h3 {
- background-image: url(../img/collapsed.png);
-}
+.collapsed h3 { background-image: url(../img/collapsed.png); }
 .plugin .buttons { text-align: right }
 .plugin .uninstall { margin-top: -2em; padding: 0 }
 .plugin .listing { width: 100% }
 .collapsed .listing, .collapsed .update { display: none }
 .plugin .listing td { background: #fff }
-.plugin .listing .name p {
- color: #999;
- font-size: 80%;
- margin: 0;
-}
-.plugin .listing .name p.description {
- font-style: italic;
- margin-top: .3em;
-}
+.plugin .listing .name p { color: #999; font-size: 80%; margin: 0 }
