--- a/xref-branch/htdocs/css/code.css
+++ b/xref-branch/htdocs/css/code.css
@@ -1,4 +1,4 @@
-table.code-block-block {
+table.code-block {
  border: 1px solid #ddd;
  border-spacing: 0;
  border-top: 0;
@@ -29,6 +29,14 @@ table.code-block tbody th {
  padding: 0 .5em;
  text-align: right;
  vertical-align: top;
+}
+table.code-block tbody th :link, table.code-block tbody th :visited {
+ border: none;
+ color: #886;
+ text-decoration: none;
+}
+table.code-block tbody th :link:hover, table.code-block tbody th :visited:hover {
+ color: #000;
 }
 table.code-block tbody td {
  background: #fff;
