--- a/webadmin/webadmin/htdocs/css/admin.css
+++ b/webadmin/webadmin/htdocs/css/admin.css
@@ -18,9 +18,9 @@
  margin-left: 12em;
  min-height: 300px;
 }
+p.help { color: #666; font-size: 90%; margin: 1em .5em .5em }
 
 form.addnew { clear: right; float: right; margin: -2em 0 4em; width: 33% }
-form.addnew p.help { color: #666; font-size: 90%; margin: 1em 0 .5em }
 form.mod { margin-top: 1em; }
 table.listing { clear: none; width: 64% }
 table.listing .sel, table.listing .default { text-align: center; width: 1% }
