--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -42,8 +42,13 @@ h4 :link, h4 :visited, h5 :link, h5 :visited, h6 :link, h6 :visited {
  color: inherit;
 }
 
-.ext-link { background: url(../extlink.gif) no-repeat 0 58%; padding-left: 16px }
-* html .ext-link { background-position: 0 .35em } /* IE hack, see #937 */
+@media screen {
+ a.ext-link {
+  background: url(../extlink.gif) no-repeat 0 58%;
+  padding-left: 16px;
+ }
+ * html a.ext-link { background-position: 0 .35em } /* IE hack, see #937 */
+}
 
 /* Forms */
 input, textarea, select { margin: 2px }
