--- a/intertrac-branch/htdocs/css/browser.css
+++ b/intertrac-branch/htdocs/css/browser.css
@@ -74,8 +74,9 @@ div.buttons {
 #chglist td.change { 
  white-space: nowrap; 
 }
-#chglist td.change div { 
+#chglist td.change span { 
  border: 1px solid #999;
+ display: block;
  margin: .2em .5em 0 0;
  width: .8em; height: .8em;
 }
