--- a/xref-branch/htdocs/css/trac.css
+++ b/xref-branch/htdocs/css/trac.css
@@ -20,6 +20,7 @@ hr { border: none;  border-top: 1px solid #ccb; margin: 2em 0 }
 address { font-style: normal }
 img { border: none }
 
+.relation { text-decoration: underline }
 .underline { text-decoration: underline }
 ol.loweralpha { list-style-type: lower-alpha }
 ol.upperalpha { list-style-type: upper-alpha }
