--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -59,4 +59,4 @@ h4:hover .anchor, h5:hover .anchor, h6:hover .anchor {
 .wiki-toc ul, .wiki-toc ol { list-style: none; padding: 0; margin: 0 }
 .wiki-toc ul ul, .wiki-toc ol ol { padding-left: 1.2em }
 .wiki-toc li { margin: 0; padding: 0 }
-.wiki-toc .active { background: #ff9 }
+.wiki-toc .active { background: #ff9; position: relative; }
